--- a/silicator.github.io/index.html
+++ b/silicator.github.io/index.html
@@ -69,7 +69,7 @@ Use '. dot' as decimal-comma separator!<br>
 <section>
     <h2>Links:</h2>
     <ul>
-      <li><a href="cpmpatibility-list.csv">Compatibility-list</a></li>
+      <li><a href="compatibility-list.csv">Compatibility-list</a></li>
 
     </ul>
 </section>
