js & html folders + paths
js & html folders + paths

--- a/html/error.html
+++ b/html/error.html
@@ -17,12 +17,12 @@ limitations under the License.
 -->
 <head>
 <title>Error</title>
-<script src="auxwindows.js"></script>
+<script src="../js/auxwindows.js"></script>
 </head>
 <body>
 <p>There was a problem: <span id="errorText"></span></p>
 <button id="exitButton">Exit</button>
-<script src="error.js"></script>
+<script src="../js/error.js"></script>
 </body>
 </html>
 
