--- a/html/estimateppm.html
+++ b/html/estimateppm.html
@@ -17,7 +17,7 @@ limitations under the License.
 -->
 <head>
 <title>Frequency correction factor estimation</title>
-<script src="auxwindows.js"></script>
+<script src="../js/auxwindows.js"></script>
 </head>
 <body>
 <p>Please turn the radio on, tune it to the loudest and clearest FM station,
@@ -27,7 +27,7 @@ and press the "Estimate PPM" button.</p>
 <p>After you set the new correction factor and turn the radio off and on again,
 you may need to repeat this operation a couple of times to refine the estimate.</p>
 <button id="closeButton">Close</button>
-<script src="estimateppm.js"></script>
+<script src="../js/estimateppm.js"></script>
 </body>
 </html>
 
