--- a/html/presetmanager.html
+++ b/html/presetmanager.html
@@ -17,9 +17,9 @@ limitations under the License.
 -->
 <head>
 <title>Preset Manager</title>
-<script src="auxwindows.js"></script>
-<script src="frequencies.js"></script>
-<script src="presets.js"></script>
+<script src="../js/auxwindows.js"></script>
+<script src="../js/frequencies.js"></script>
+<script src="../js/presets.js"></script>
 <style>
 table {
   border: 1px solid black;
@@ -105,7 +105,7 @@ table {
 <p>
 <button id="closeButton">Close</button>
 </p>
-<script src="presetmanager.js"></script>
+<script src="../js/presetmanager.js"></script>
 </body>
 </html>
 
