--- a/html/savedialog.html
+++ b/html/savedialog.html
@@ -17,14 +17,14 @@ limitations under the License.
 -->
 <head>
 <title>Name this station</title>
-<script src="frequencies.js"></script>
-<script src="auxwindows.js"></script>
+<script src="../js/frequencies.js"></script>
+<script src="../js/auxwindows.js"></script>
 </head>
 <body>
 <p><label for="stationName">Please enter a name for the station on <span id="frequencyLabel"></span>:</label><br />
 <input type="text" id="stationName" name="stationName" autofocus="autofocus" style="width: 100%"></input></p>
 <button id="ok" type="submit">Save</button> <button id="cancel">Cancel</button>
-<script src="savedialog.js"></script>
+<script src="../js/savedialog.js"></script>
 </body>
 </html>
 
