--- a/html/settings.html
+++ b/html/settings.html
@@ -17,7 +17,7 @@ limitations under the License.
 -->
 <head>
 <title>Radio Receiver Settings</title>
-<script src="auxwindows.js"></script>
+<script src="../js/auxwindows.js"></script>
 <style>
 .ppm, .upconverterFreq {
   text-align: right;
@@ -44,7 +44,7 @@ limitations under the License.
 <p>You may need to turn the radio off and on before those settings take effect.</p>
 <p><a  id="managePresetsLink" href="#">Manage your presets</a>.</p>
 <button id="ok" type="submit">Save</button> <button id="cancel">Cancel</button>
-<script src="settings.js"></script>
+<script src="../js/settings.js"></script>
 </body>
 </html>
 
