--- a/html/help.html
+++ b/html/help.html
@@ -17,7 +17,7 @@ limitations under the License.
 -->
 <head>
 <title>Radio Receiver Help</title>
-<script src="auxwindows.js"></script>
+<script src="../js/auxwindows.js"></script>
 <style>
 body {
   position: absolute;
@@ -50,7 +50,7 @@ h1 {
 
 <h1 id="standard">Using Radio Receiver</h1>
 
-<div class="image"><img src="help-iface.png" width="615" height="350" title="Radio Receiver main interface"></div>
+<div class="image"><img src="../docs/img-src/help-iface.png" width="615" height="350" title="Main interface"></div>
 
 <h2>Start and stop</h2>
 <p>Press the &ldquo;Power On&rdquo; button (<b>1</b>) to start playing the radio. You'll see that the label changes to &ldquo;Power Off&rdquo;; if you press it again, the radio will stop.</p>
@@ -90,7 +90,7 @@ h1 {
 
 <p>Free Tuning appears like an extra band in Radio Receiver. To enter Free Tuning, click the band indicator (<b>5</b> in the picture above) until the display changes to look like this:</p>
 
-<div class="image"><img src="help-freetuning.png" width="614" height="350" title="Radio Receiver free-tuning interface"></div>
+<div class="image"><img src="../docs/img-src/help-freetuning.png" width="614" height="350" title="Radio Receiver free-tuning interface"></div>
 
 <p>Every button in Radio Receiver works in Free Tuning mode like it does elsewhere; however, you have some extra functions available.</p>
 
@@ -107,7 +107,7 @@ h1 {
 <h1 id="settings">Settings</h1>
 <p>You can change a lot of settings by clicking on the &ldquo;wrench&rdquo; icon (<b>12</b>). There you can change several settings:</p>
 
-<div class="image"><img src="help-settings.png" width="396" height="357" title="Radio Receiver settings window"></div>
+<div class="image"><img src="../docs/img-src/help-settings.png" width="396" height="357" title="Settings window"></div>
 
 <ul>
 <li><b>Region</b>: Radios use different frequencies in different parts of the world. For best results, you should select the part of the world you live in.</li>
@@ -142,7 +142,7 @@ h1 {
 <tr><td><tt>Escape</tt></td><td>Remove focus from all elements and re-enable shortcuts</td></tr>
 </table>
 <button id="exitButton">Exit</button>
-<script src="help.js"></script>
+<script src="../js/help.js"></script>
 </body>
 </html>
 
