--- a/html/interface.html
+++ b/html/interface.html
@@ -16,24 +16,25 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <head>
-<title>Radio Receiver</title>
+<title>SDRFunk Radio Receiver</title>
 <link rel="stylesheet" href="interface.css">
-<script src="wavsaver.js"></script>
-<script src="audio.js"></script>
-<script src="rtlcom.js"></script>
-<script src="r820t.js"></script>
-<script src="rtl2832u.js"></script>
-<script src="radiocontroller.js"></script>
-<script src="auxwindows.js"></script>
-<script src="frequencies.js"></script>
-<script src="presets.js"></script>
-<script src="appconfig.js"></script>
-<script src="interface.js"></script>
+<script src="../js/wavsaver.js"></script>
+<script src="../js/audio.js"></script>
+<script src="../js/rtlcom.js"></script>
+<script src="../js/r820t.js"></script>
+<script src="../js/rtl2832u.js"></script>
+<script src="../js/radiocontroller.js"></script>
+<script src="../js/auxwindows.js"></script>
+<script src="../js/frequencies.js"></script>
+<script src="../js/presets.js"></script>
+<script src="../js/appconfig.js"></script>
+<script src="../js/decode-worker.js"></script>
+<script src="../js/interface.js"></script>
 </head>
 
-<body>
+<body style="height: 300px">
 <div class="titleBar">
-<div class="titleText">Radio Receiver</div>
+<div class="titleText">SDRFunk Radio Receiver</div>
 <button id="settingsButton" class="invisibleButton settingsButton" title="Settings"><svg class="gearIcon" xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewbox="0 0 12 12" version="1.1"><path d="M 4 0 C 3.6995571 6.0396133e-017 3.4065173 0.062205142 3.125 0.125 L 5.5 2.5 L 5.5 5.5 L 2.5 5.5 L 0.125 3.125 C 0.062205142 3.4065173 3.8172951e-018 3.6995571 0 4 C 0 6.209139 1.790861 8 4 8 C 4.5865827 8 5.1543432 7.8830794 5.65625 7.65625 L 10 12 L 12 12 L 12 10 L 7.65625 5.65625 C 7.8830794 5.1543432 8 4.5865827 8 4 C 8 1.790861 6.209139 -8.6013372e-016 4 0 z "></svg></button>
 <button id="helpButton" class="invisibleButton helpButton" title="Help"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewbox="0 0 12 12" version="1.1"><circle cx="6" cy="11" r="1" /><path d="M6,6a2,2,0,1,0,-2,-2h-2a4,4,0,1,1,4,4z" /><path d="M5,6v3h2v-3z" /></svg></button>
 <div id="closeButton" class="closeButton" title="Close"><svg class="closeIcon" xmlns="http://www.w3.org/2000/svg" version="1.1" width="8" height="8" viewBox="0 0 8 8"><path d="M0,0h1l3,3l3,-3,h1v1l-3,3l3,3v1h-1l-3,-3l-3,3h-1v-1l3,-3l-3,-3z" /></svg></div>
@@ -73,7 +74,7 @@ limitations under the License.
         <div class="freeTuningHz">Hz</div>
       </div>
       <div id="maxfBox" class="maxfBox freeTuningBox">
-        <div class="freeTuningLabel"><label for="maxfInput">Max <i>f<span style="font-size: 8px">dev</span></i>:</label></div>
+        <div class="freeTuningLabel"><label for="maxfInput">Max<i>f<span style="font-size: 8px">dev</span></i>:</label></div>
         <div id="maxfDisplay" class="maxfDisplay freeTuningDisplay" tabindex="15"></div>
         <input type="text" id="maxfInput" class="maxfInput freeTuningInput invisible" autocomplete="off" tabindex="15"></input>
         <div class="freeTuningHz">Hz</div>
