--- a/html/options.html
+++ b/html/options.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <head>
  <link href="options.css" rel="stylesheet" type="text/css"> 
-  <script src="options.js"></script>
+  <script src="../js/options.js"></script>
 </head>
 
 <div id="container">
