--- a/silicator.github.io/index.html
+++ b/silicator.github.io/index.html
@@ -52,14 +52,14 @@
   </head>
   <body>
  <header>
-    <img src="favicon.png" alt="logo"> 
+    <img src="../docs/favicon.png" alt="logo"> 
     <h2>SDRFunk HAM-Radio Receiver Extension with FM/AM-Modulation for Chrome Browser </h2>
   </header>
 <main>
 <article>
     <p>
 
-Radio works with *.wav-file with 16-bit PCM @ 22050.0 [Hz] mono / 1-700 [MHz] range.<br>
+Radio works with *.wav-file with 16-bit PCM @ 48000.0 [Hz] stereo / 0-12000 [MHz] range.<br>
 
 Use '. dot' as decimal-comma separator!<br>
 	</p>
