preparing manifest, Readme update
preparing manifest, Readme update

--- a/html/help.html
+++ b/html/help.html
@@ -16,7 +16,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <head>
-<title>Radio Receiver Help</title>
+<title>SDRFunk Radio Receiver Help</title>
 <script src="../js/auxwindows.js"></script>
 <style>
 body {
@@ -42,7 +42,7 @@ h1 {
 <body>
 <h1>Radio Receiver help</h1>
 
-<p>Radio Receiver is a Chrome application to listen to radio signals on your computer using a USB digital TV tuner. You can <a href="#standard">use it as a regular AM/FM radio</a>, or you can <a href="#freetuning">use it in Free Tuning mode</a> to listen to all kinds of radio signals, like amateur radio, marine radio, aviation radio, public safety radio, or short wave radio (using an upconverter).</p>
+<p>Radio Receiver is a Firefox application to listen to radio signals on your computer using a USB digital TV tuner. You can <a href="#standard">use it as a regular AM/FM radio</a>, or you can <a href="#freetuning">use it in Free Tuning mode</a> to listen to all kinds of radio signals, like amateur radio, marine radio, aviation radio, public safety radio, or short wave radio (using an upconverter).</p>
 
 <p>You can <a href="#settings">use the settings window</a> to set Radio Receiver up for your country's radio bands, configure an upconverter, set custom tuner gain, adjust your tuner's oscillators, etc.</p>
 
@@ -145,4 +145,3 @@ h1 {
 <script src="../js/help.js"></script>
 </body>
 </html>
-
