Manifest, icons, html utf-8 encoding
Manifest, icons, html utf-8 encoding

--- a/html/error.html
+++ b/html/error.html
@@ -17,11 +17,11 @@ limitations under the License.
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <head>
 <title>Error</title>
-<script src="../js/auxwindows.js"></script>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
+<script src="../js/error.js"></script>
 </head>
 <body>
 <p>There was a problem: <span id="errorText"></span></p>
 <button id="exitButton">Exit</button>
-<script src="../js/error.js"></script>
 </body>
 </html>
