--- a/html/help.html
+++ b/html/help.html
@@ -1,5 +1,3 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <!--
 Copyright 2014 Google Inc. All rights reserved.
 
@@ -15,8 +13,11 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <head>
 <title>SDRFunk Radio Receiver Help</title>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
 <script src="../js/auxwindows.js"></script>
 <style>
 body {
