--- a/html/options.html
+++ b/html/options.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <head>
+ <meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
  <link href="options.css" rel="stylesheet" type="text/css">
  <script src="../js/options.js"></script>
 </head>
 <div id="container">
-  <input type="checkbox" id="regularValue" />
+  <input type="checkbox" id="regularValue"/>
   Enable referrers
   <div id="incognito">
-    <input type="checkbox" id="useSeparateIncognitoSettings" />
+    <input type="checkbox" id="useSeparateIncognitoSettings"/>
     Use separate setting for incognito mode:
     <br>
     <input type="checkbox" id="incognitoValue" disabled="disabled"/>
