--- a/html/presetmanager.html
+++ b/html/presetmanager.html
@@ -17,6 +17,7 @@ limitations under the License.
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <head>
 <title>Preset Manager</title>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
 <script src="../js/auxwindows.js"></script>
 <script src="../js/frequencies.js"></script>
 <script src="../js/presets.js"></script>
