--- a/html/devtools.html
+++ b/html/devtools.html
@@ -1,4 +1,8 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
+<head>
+<title>Devtools</title>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
+</head>
 
 </html>
