--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <head>
-  <meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
 </head>
 <body>
-    
+
 </body>
 </html>
