--- a/html/interface.html
+++ b/html/interface.html
@@ -18,6 +18,7 @@ limitations under the License.
 <head>
 <title>SDRFunk Radio Receiver</title>
 <link rel="stylesheet" href="interface.css">
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
 <script src="../js/wavsaver.js"></script>
 <script src="../js/audio.js"></script>
 <script src="../js/rtlcom.js"></script>
@@ -30,6 +31,9 @@ limitations under the License.
 <script src="../js/appconfig.js"></script>
 <script src="../js/decode-worker.js"></script>
 <script src="../js/interface.js"></script>
+<script src="../js/estimateppm.js"></script>
+<script src="../js/settings.js"></script>
+
 </head>
 
 <body style="height: 300px">
