--- a/html/popup.html
+++ b/html/popup.html
@@ -1,4 +1,11 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
+<head>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
+<link rel="stylesheet" href="interface.css"/>
 
+</head>
+<body>
+
+</body>
 </html>
