--- a/html/estimateppm.html
+++ b/html/estimateppm.html
@@ -1,5 +1,3 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <!--
 Copyright 2014 Google Inc. All rights reserved.
 
@@ -15,9 +13,13 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <head>
 <title>Frequency correction factor estimation</title>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
 <script src="../js/auxwindows.js"></script>
+<script src="../js/estimateppm.js"></script>
 </head>
 <body>
 <p>Please turn the radio on, tune it to the loudest and clearest FM station,
@@ -27,7 +29,6 @@ and press the "Estimate PPM" button.</p>
 <p>After you set the new correction factor and turn the radio off and on again,
 you may need to repeat this operation a couple of times to refine the estimate.</p>
 <button id="closeButton">Close</button>
-<script src="../js/estimateppm.js"></script>
+
 </body>
 </html>
-
