--- a/html/_generated_background_page.html
+++ b/html/_generated_background_page.html
@@ -1,3 +1,8 @@
-<html>
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
+<head>
+<title>Generated Background Page</title>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
+</head>
 
 </html>
