--- a/html/error.html
+++ b/html/error.html
@@ -1,5 +1,3 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <!--
 Copyright 2013 Google Inc. All rights reserved.
 
@@ -15,14 +13,15 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <head>
 <title>Error</title>
-<script src="../js/auxwindows.js"></script>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
+<script src="../js/error.js"></script>
 </head>
 <body>
 <p>There was a problem: <span id="errorText"></span></p>
 <button id="exitButton">Exit</button>
-<script src="../js/error.js"></script>
 </body>
 </html>
-
