--- a/html/savedialog.html
+++ b/html/savedialog.html
@@ -1,5 +1,3 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <!--
 Copyright 2013 Google Inc. All rights reserved.
 
@@ -15,16 +13,20 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <head>
 <title>Name this station</title>
+<meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
 <script src="../js/frequencies.js"></script>
 <script src="../js/auxwindows.js"></script>
+<script src="../js/savedialog.js"></script>
 </head>
 <body>
-<p><label for="stationName">Please enter a name for the station on <span id="frequencyLabel"></span>:</label><br />
+<p><label for="stationName">Please enter a name for the station on <span id="frequencyLabel"></span>:</label><br/>
 <input type="text" id="stationName" name="stationName" autofocus="autofocus" style="width: 100%"></input></p>
-<button id="ok" type="submit">Save</button> <button id="cancel">Cancel</button>
-<script src="../js/savedialog.js"></script>
+<button id="ok" type="submit">Save</button>
+<button id="cancel">Cancel</button>
+
 </body>
 </html>
-
