cleanup + not resizable
cleanup + not resizable

--- a/html/interface.html
+++ b/html/interface.html
@@ -1,5 +1,3 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <!--
 Copyright 2013 Google Inc. All rights reserved.
 
@@ -15,25 +13,30 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us">
 <head>
 <title>SDRFunk Radio Receiver</title>
 <link rel="stylesheet" href="interface.css">
 <meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
-<script src="../js/wavsaver.js"></script>
+<script src="../js/interface.js"></script>
+<script src="../js/appconfig.js"></script>
+
 <script src="../js/audio.js"></script>
 <script src="../js/rtlcom.js"></script>
 <script src="../js/r820t.js"></script>
 <script src="../js/rtl2832u.js"></script>
 <script src="../js/radiocontroller.js"></script>
 <script src="../js/auxwindows.js"></script>
+<script src="../js/wavsaver.js"></script>
 <script src="../js/frequencies.js"></script>
 <script src="../js/presets.js"></script>
-<script src="../js/appconfig.js"></script>
+<script src="../js/presetmanager.js"></script>
+<script src="../js/savedialogs.js"></script>
 <script src="../js/decode-worker.js"></script>
-<script src="../js/interface.js"></script>
 <script src="../js/estimateppm.js"></script>
 <script src="../js/settings.js"></script>
-
+<script src="../js/error.js"></script>
 </head>
 
 <body style="height: 300px">
