--- a/html/interface.html
+++ b/html/interface.html
@@ -21,7 +21,6 @@ limitations under the License.
 <meta http-equiv="Content-Type" content="text/html, charset=UTF-8">
 <script src="../js/interface.js"></script>
 <script src="../js/appconfig.js"></script>
-
 <script src="../js/audio.js"></script>
 <script src="../js/rtlcom.js"></script>
 <script src="../js/r820t.js"></script>
@@ -36,7 +35,7 @@ limitations under the License.
 <script src="../js/decode-worker.js"></script>
 <script src="../js/estimateppm.js"></script>
 <script src="../js/settings.js"></script>
-<script src="../js/error.js"></script>
+
 </head>
 
 <body style="height: 300px">
@@ -81,7 +80,7 @@ limitations under the License.
         <div class="freeTuningHz">Hz</div>
       </div>
       <div id="maxfBox" class="maxfBox freeTuningBox">
-        <div class="freeTuningLabel"><label for="maxfInput">Max<i>f<span style="font-size: 8px">dev</span></i>:</label></div>
+        <div class="freeTuningLabel"><label for="maxfInput">Max:<i>f<span style="font-size: 8px">dev</span></i>:</label></div>
         <div id="maxfDisplay" class="maxfDisplay freeTuningDisplay" tabindex="15"></div>
         <input type="text" id="maxfInput" class="maxfInput freeTuningInput invisible" autocomplete="off" tabindex="15"></input>
         <div class="freeTuningHz">Hz</div>
