--- a/wodowiesel.github.io/index.html
+++ b/wodowiesel.github.io/index.html
@@ -75,7 +75,7 @@ Use '. dot' as decimal-comma separator!<br>
 </section>
   </aside>
   <footer>
-     <p>(C) 2017-2019 by silicator a.k.a. wiesel </p>
+     <p>(C) 2017-2019 by wodowiesel </p>
   </footer>
 
   </body>
